--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14809,11 +14809,11 @@ section.home-search .home-search-mobile {
   .hairfie-singleView .mobile-popup {
     background-color: white;
     height: 100vh;
-    width: calc(100% + 10px);
+    width: 100%;
     overflow: scroll; }
     .hairfie-singleView .mobile-popup .single-view {
       background-color: transparent;
-      width: calc(100% - 10px); }
+      width: 100%; }
       .hairfie-singleView .mobile-popup .single-view .business-box {
         height: 90px;
         padding: 0 10px;
@@ -14834,6 +14834,7 @@ section.home-search .home-search-mobile {
           border-radius: 2px; }
         .hairfie-singleView .mobile-popup .single-view .business-box .business-box-text-container {
           padding: 0 10px;
+          width: 80%;
           display: -webkit-box;
           display: -webkit-flex;
           display: -moz-flex;
@@ -14853,11 +14854,43 @@ section.home-search .home-search-mobile {
             color: black;
             font-size: 1.6em;
             font-weight: 400; }
-      .hairfie-singleView .mobile-popup .single-view .hairfie-single-container {
+        .hairfie-singleView .mobile-popup .single-view .business-box span.quit {
+          background-image: url(../img/search/croix.svg);
+          width: 50px;
+          height: 50px;
+          position: inherit; }
+      .hairfie-singleView .mobile-popup .single-view .hairfie-container {
         padding: 0 10px 0 10px;
-        float: none; }
-        .hairfie-singleView .mobile-popup .single-view .hairfie-single-container #carousel-hairfie {
+        float: none;
+        position: relative;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        -moz-align-items: center;
+        align-items: center; }
+        .hairfie-singleView .mobile-popup .single-view .hairfie-container span.before, .hairfie-singleView .mobile-popup .single-view .hairfie-container span.after {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -moz-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          -webkit-align-items: center;
+          -moz-align-items: center;
+          align-items: center;
+          padding-top: 0; }
+        .hairfie-singleView .mobile-popup .single-view .hairfie-container .hairfie-single-container {
+          padding: 0; }
+        .hairfie-singleView .mobile-popup .single-view .hairfie-container #carousel-hairfie {
           margin-left: 0; }
+        .hairfie-singleView .mobile-popup .single-view .hairfie-container span.force-size {
+          display: none; }
     .hairfie-singleView .mobile-popup .like-group {
       display: none !important; }
     .hairfie-singleView .mobile-popup .tags {
