--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14905,6 +14905,7 @@ section.home-search .home-search-mobile {
       padding: 10px 16px !important;
       font-size: 1.4em !important;
       margin-left: 10px !important;
+      margin-bottom: 50px !important;
       bottom: 0;
       left: 0; }
   .hairfie-singleView .single-view {
