--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -183,6 +183,7 @@
             padding: 10px 16px !important;
             font-size: 1.4em !important;
             margin-left: 10px !important;
+            margin-bottom: 50px !important;
             bottom: 0;
             left: 0;
         }
