--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -276,7 +276,7 @@
                 right: 20px;
             }
         }
-        > div:nth-child(2) {
+        > div:nth-child(2), .right-column {
             padding: 20px;
 
             .salon-infos {
