--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14764,7 +14764,7 @@ section.home-search .home-search-mobile {
       height: 35%;
       width: 5vw;
       position: absolute;
-      z-index: 1;
+      z-index: 3;
       top: 32.5%;
       right: calc(100% + 2.5vw);
       padding-top: calc(9.5% - 25px);
@@ -14776,7 +14776,7 @@ section.home-search .home-search-mobile {
       height: 35%;
       width: 5vw;
       position: absolute;
-      z-index: 1;
+      z-index: 3;
       top: 32.5%;
       left: 100%;
       padding-top: calc(9.5% - 25px);
@@ -14869,6 +14869,7 @@ section.home-search .home-search-mobile {
         padding: 0 10px 0 10px;
         float: none;
         position: relative;
+        min-height: calc(100vw - 20px);
         display: -webkit-box;
         display: -webkit-flex;
         display: -moz-flex;
@@ -14891,6 +14892,21 @@ section.home-search .home-search-mobile {
           -moz-align-items: center;
           align-items: center;
           padding-top: 0; }
+        .hairfie-singleView .mobile-popup .single-view .hairfie-container .transition {
+          height: 100%;
+          width: calc(100% - 20px);
+          position: absolute;
+          background-color: white;
+          background-size: 100% 100%;
+          -webkit-transition: all 0.2s ease;
+          -moz-transition: all 0.2s ease;
+          -ms-transition: all 0.2s ease;
+          -o-transition: all 0.2s ease;
+          z-index: 2;
+          opacity: 0;
+          pointer-events: none; }
+          .hairfie-singleView .mobile-popup .single-view .hairfie-container .transition.on {
+            opacity: 1; }
         .hairfie-singleView .mobile-popup .single-view .hairfie-container .hairfie-single-container {
           padding: 0; }
         .hairfie-singleView .mobile-popup .single-view .hairfie-container #carousel-hairfie {
