--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13371,6 +13371,26 @@ section.home-search .home-search-mobile {
       z-index: 149; } }
   #content.search .sidebar > h4 {
     padding-bottom: 10px; }
+  #content.search .sidebar .react-autosuggest__container {
+    width: 100%;
+    padding: 0 25px; }
+    #content.search .sidebar .react-autosuggest__container .react-autosuggest__input {
+      width: 100%;
+      height: 45px;
+      border: 1px solid #dfdfdf;
+      outline-width: 0;
+      font-size: 1.4em;
+      padding-left: 40px;
+      background: url(../img/search/search-slim.svg) no-repeat 12px;
+      background-size: 18px; }
+    #content.search .sidebar .react-autosuggest__container .react-autosuggest__suggestion {
+      border: 1px solid #dfdfdf;
+      border-top: none;
+      font-size: 1.4em;
+      width: 100%;
+      padding: .5em .65em; }
+    #content.search .sidebar .react-autosuggest__container .react-autosuggest__suggestion--focused {
+      background-color: #f5f5f5; }
   #content.search .sidebar .underliner {
     height: 1px;
     width: calc(100% - 50px);
