--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -1248,6 +1248,32 @@
         >h4 {
             padding-bottom: 10px;
         }
+
+        .react-autosuggest__container {
+            width: 100%;
+            padding: 0 25px; 
+            .react-autosuggest__input {
+                width: 100%;
+                height: 45px;
+                border: 1px solid $grey2;
+                outline-width: 0;
+                font-size: 1.4em;
+                padding-left: 40px;
+                background: url(../img/search/search-slim.svg) no-repeat 12px;
+                background-size: 18px;
+            }
+            .react-autosuggest__suggestion {
+                border: 1px solid $grey2;
+                border-top: none;
+                font-size: 1.4em;
+                width: 100%;
+                padding: .5em .65em;
+            }
+            .react-autosuggest__suggestion--focused {
+                background-color: #f5f5f5;
+            }
+        }
+
         .underliner {
             height: 1px;
             width: calc(100% - 50px);
