--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -628,6 +628,27 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
                 }
             }
         }
+        .infos-mobile {
+            height: 50px;
+            border: 1px solid $grey2;
+            border-top: 0;
+            padding: 3px 10px;
+            background-color: white;
+            .business-title {
+                color: $grey;
+                text-transform: uppercase;
+                font-size: 1.3em;
+            }
+            .business-name {
+                color: black;
+                font-size: 1.6em;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                width: 100%;
+                display: inline-block;
+            }
+        }
         @media screen and (min-width: $screen-md-min) {
             padding: 5px 10px 5px 0;
         }
@@ -1014,7 +1035,7 @@ div.shadow {
         background-color: rgba(0, 0 ,0, 0.6);
         left: 0;
         top: 0;
-        z-index: 5;
+        z-index: 25;
     }
     &.inactive {
         display: none;
