--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11509,8 +11509,9 @@ section.selections {
         width: 100%;
         height: 185px;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         background-position: center;
+        background-color: #fe5b5f;
         border-bottom: 1px solid #fe5b5f; }
         @media screen and (max-width: 767px) {
           section.selections .flex-selections .selection-item .img {
@@ -11521,6 +11522,12 @@ section.selections {
         background-image: url(../img/selections/les-meilleurs-coloristes.jpg); }
       section.selections .flex-selections .selection-item .les-barbershops {
         background-image: url(../img/selections/les-barbershops.jpg); }
+      section.selections .flex-selections .selection-item .selection-bons-plans-hairfie {
+        background-image: url(../img/selections/selection-bons-plans-hairfie.png); }
+      section.selections .flex-selections .selection-item .selection-coloristes-hairfie {
+        background-image: url(../img/selections/selection-coloristes-hairfie.png); }
+      section.selections .flex-selections .selection-item .selection-visagistes-hairfie {
+        background-image: url(../img/selections/selection-visagistes-hairfie.png); }
 
 section.home-section {
   position: relative; }
